--- a/docker-compose-production.yml
+++ b/docker-compose-production.yml
@@ -29,7 +29,7 @@ services:
     container_name: api
     volumes:
       - .:/work
-    command: "./production.sh"
+    command: "./rc/production.sh"
 
   postgres:
     image: postgres:12.0-alpine
@@ -54,7 +54,7 @@ services:
       - PGADMIN_DEFAULT_PASSWORD=prinus
       # - SCRIPT_NAME=/pgadmin
     volumes:
-      - ./servers.json:/pgadmin4/servers.json
+      - ./etc/servers.json:/pgadmin4/servers.json
     ports:
       - 8082:80
     container_name: pgadmin
