--- a/docker-compose-swarm.yml
+++ b/docker-compose-swarm.yml
@@ -6,7 +6,7 @@ services:
     labels:
       - "traefik.enable=true"
       - traefik.http.routers.api.rule=PathPrefix(`/api`)
-    image: sp33c/api:1.0
+    image: 127.0.0.1:5000/api
     ports:
       - 8081:5000
     container_name: api
