--- a/docker-compose-swarm.yml
+++ b/docker-compose-swarm.yml
@@ -10,6 +10,8 @@ services:
     build: .
     ports:
       - 8000:8000
+        #networks:
+        #- appnet
     deploy:
       placement:
         constraints:
@@ -27,7 +29,9 @@ services:
       - POSTGRES_DB=appdb
       - PGDATA=/var/lib/postgresql/data/pgdata
     volumes:
-      - .:/var/lib/postgresql/data
+      - /home/ubuntu/db:/var/lib/postgresql/data
+        #   networks:
+        #- appnet
     deploy: 
       placement: 
         constraints:
@@ -54,3 +58,9 @@ services:
         constraints:
           - node.labels.role==db
                 #- node.role == manager
+                #
+                #
+networks:
+  appnet:
+    driver: overlay
+    #attachable: true
