--- a/docker-compose-db.yml
+++ b/docker-compose-db.yml
@@ -11,6 +11,21 @@ services:
 #    command: zsh
 #    #"./production.sh"
 
+  redis:
+    container_name: redis
+    hostname: redis
+    image: redis
+
+  redis-commander:
+    container_name: redis-commander
+    hostname: redis-commander
+    image: rediscommander/redis-commander:latest
+    restart: always
+    environment:
+    - REDIS_HOSTS=local:redis:6379
+    ports:
+    - "8085:8081"
+
   postgres:
     image: postgres:12.0-alpine
     environment:
