--- a/docker-compose-swarm.yml
+++ b/docker-compose-swarm.yml
@@ -26,9 +26,9 @@ services:
     hostname: redis
     image: redis
     deploy: 
-    placement: 
-      constraints:
-        - node.labels.role==db
+      placement: 
+        constraints:
+          - node.labels.role==db
 
   redis-commander:
     container_name: redis-commander
@@ -39,9 +39,10 @@ services:
     - REDIS_HOSTS=local:redis:6379
     ports:
     - "8085:8081"
-    placement: 
-      constraints:
-        - node.labels.role==db
+    deploy: 
+      placement: 
+        constraints:
+          - node.labels.role==db
       
   postgres:
     image: postgres:12.0-alpine
