--- a/docker-compose-swarm.yml
+++ b/docker-compose-swarm.yml
@@ -7,11 +7,14 @@ services:
       - "traefik.enable=true"
       - traefik.http.routers.api.rule=PathPrefix(`/api`)
     image: 127.0.0.1:5001/api:1.0
-    build: .
+    #build: .
     ports:
       - 8000:8000
         #networks:
         #- appnet
+    depends_on:
+      - redis
+      - postres
     deploy:
       placement:
         constraints:
@@ -22,7 +25,7 @@ services:
         delay: 10s
 
   redis:
-    container_name: redis
+    #container_name: redis
     hostname: redis
     image: redis
     deploy: 
@@ -31,14 +34,16 @@ services:
           - node.labels.role==db
 
   redis-commander:
-    container_name: redis-commander
+    #container_name: redis-commander
     hostname: redis-commander
     image: rediscommander/redis-commander:latest
-    restart: always
+    #restart: always
     environment:
     - REDIS_HOSTS=local:redis:6379
     ports:
     - "8085:8081"
+    depends_on:
+      - redis
     deploy: 
       placement: 
         constraints:
@@ -63,6 +68,8 @@ services:
 
   pgadmin:
     image: dpage/pgadmin4
+    depends_on:
+      - postgres
     labels:
       - "traefik.enable=true"
       # - "traefik.http.routers.pgadmin.rule=PathPrefix(`/pgadmin`)"
