--- a/docker-compose-swarm.yml
+++ b/docker-compose-swarm.yml
@@ -7,14 +7,11 @@ services:
       - "traefik.enable=true"
       - traefik.http.routers.api.rule=PathPrefix(`/api`)
     image: 127.0.0.1:5001/api:1.0
-    #build: .
+    build: .
     ports:
       - 8000:8000
         #networks:
         #- appnet
-    depends_on:
-      - redis
-      - postres
     deploy:
       placement:
         constraints:
@@ -90,7 +87,7 @@ services:
                 #- node.role == manager
                 #
                 #
-networks:
-  appnet:
-    driver: overlay
+                #networks:
+                #appnet:
+                #driver: overlay
     #attachable: true
