--- a/docker-compose-swarm.yml
+++ b/docker-compose-swarm.yml
@@ -12,6 +12,8 @@ services:
       - 8000:8000
         #networks:
         #- appnet
+    depends_on:
+      - redis    
     deploy:
       placement:
         constraints:
