--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,7 @@
             "console": "integratedTerminal",
             "cwd": "/work/app",
             "env": {
-                "SECRET_KEY": "Secret Key"
+                "SECRET_KEY": "UGV0ZXIgTGluZGJlcmdoIHN0ZWxsdGUgYmVpIGRlbi"
             },
         },
         {
